// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactMapChart Should match existing snapshot when given data with extra axes. 1`] = `
<PlotlyChartClass
  candidateResidues={Array []}
  config={Object {}}
  data={
    Array [
      Object {
        "hoverinfo": "x+y+z",
        "marker": Object {
          "color": Array [],
          "size": 0,
        },
        "mode": "markers",
        "name": " undefined",
        "type": "scattergl",
        "x": Array [],
        "y": Array [],
        "z": Array [],
      },
    ]
  }
  dataTransformFn={[Function]}
  layout={
    Object {
      "height": 520,
      "legend": Object {
        "orientation": "h",
        "y": -0.1,
        "yanchor": "bottom",
      },
      "margin": Object {
        "b": 40,
        "l": 16,
      },
      "showlegend": true,
      "xaxis": Object {
        "autorange": false,
        "nticks": 10,
        "range": Array [
          1,
          100,
        ],
        "showline": true,
        "tickmode": "auto",
        "title": "Residue #",
      },
      "yaxis": Object {
        "autorange": false,
        "nticks": 10,
        "range": Array [
          100,
          1,
        ],
        "showline": true,
        "tickmode": "auto",
        "title": "Residue #",
      },
    }
  }
  secondaryStructures={
    Array [
      Array [
        Chell1DSection {
          "label": "H",
          "sectionEnd": 2,
          "sectionStart": 0,
        },
        Chell1DSection {
          "label": "E",
          "sectionEnd": 3,
          "sectionStart": 3,
        },
      ],
    ]
  }
  selectedSecondaryStructures={Array []}
/>
`;

exports[`ContactMapChart Should match existing snapshot when given data with multiple secondary structures. 1`] = `
<PlotlyChartClass
  candidateResidues={Array []}
  config={Object {}}
  data={
    Array [
      Object {
        "hoverinfo": "x+y+z",
        "marker": Object {
          "color": Array [],
          "size": 0,
        },
        "mode": "markers",
        "name": " undefined",
        "type": "scattergl",
        "x": Array [],
        "y": Array [],
        "z": Array [],
      },
    ]
  }
  dataTransformFn={[Function]}
  layout={
    Object {
      "height": 520,
      "legend": Object {
        "orientation": "h",
        "y": -0.1,
        "yanchor": "bottom",
      },
      "margin": Object {
        "b": 40,
        "l": 16,
      },
      "showlegend": true,
      "xaxis": Object {
        "autorange": false,
        "nticks": 10,
        "range": Array [
          1,
          100,
        ],
        "showline": true,
        "tickmode": "auto",
        "title": "Residue #",
      },
      "yaxis": Object {
        "autorange": false,
        "nticks": 10,
        "range": Array [
          100,
          1,
        ],
        "showline": true,
        "tickmode": "auto",
        "title": "Residue #",
      },
    }
  }
  secondaryStructures={
    Array [
      Array [
        Chell1DSection {
          "label": "H",
          "sectionEnd": 2,
          "sectionStart": 0,
        },
        Chell1DSection {
          "label": "E",
          "sectionEnd": 3,
          "sectionStart": 3,
        },
      ],
      Array [
        Chell1DSection {
          "label": "C",
          "sectionEnd": 2,
          "sectionStart": 0,
        },
        Chell1DSection {
          "label": "H",
          "sectionEnd": 14,
          "sectionStart": 11,
        },
      ],
    ]
  }
  selectedSecondaryStructures={Array []}
/>
`;

exports[`ContactMapChart Should match existing snapshot when given simple data. 1`] = `
<PlotlyChartClass
  candidateResidues={Array []}
  config={Object {}}
  data={
    Array [
      Object {
        "hoverinfo": "x+y+z",
        "marker": Object {
          "color": Array [],
          "size": 0,
        },
        "mode": "markers",
        "name": " undefined",
        "type": "scattergl",
        "x": Array [],
        "y": Array [],
        "z": Array [],
      },
    ]
  }
  dataTransformFn={[Function]}
  layout={
    Object {
      "height": 520,
      "legend": Object {
        "orientation": "h",
        "y": -0.1,
        "yanchor": "bottom",
      },
      "margin": Object {
        "b": 40,
        "l": 16,
      },
      "showlegend": true,
      "xaxis": Object {
        "autorange": false,
        "nticks": 10,
        "range": Array [
          1,
          100,
        ],
        "showline": true,
        "tickmode": "auto",
        "title": "Residue #",
      },
      "yaxis": Object {
        "autorange": false,
        "nticks": 10,
        "range": Array [
          100,
          1,
        ],
        "showline": true,
        "tickmode": "auto",
        "title": "Residue #",
      },
    }
  }
  secondaryStructures={Array []}
  selectedSecondaryStructures={Array []}
/>
`;
